--- a/django/portfolio/zen_garden/templates/zen_garden/zen_mockup.html
+++ b/django/portfolio/zen_garden/templates/zen_garden/zen_mockup.html
@@ -5,7 +5,7 @@
 
     {% load staticfiles %}
 
-    <link rel="stylesheet" media="screen" href="{% static "/static/zen_mockup.css" %}">
+    <link rel="stylesheet" media="screen" href="{% static '/static/zen_mockup.css' %}">
 
 </head>
 
