--- a/django/pollproject/poll_site/templates/poll_site/index.html
+++ b/django/pollproject/poll_site/templates/poll_site/index.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
+{% extends 'poll_site/base_template.html' %}
 
-<html>
-<link rel="stylesheet" type="text/css" href="static/poll_site/style.css">
-<head>
-
-	<title> F-ing around</title>
-
-	<style>
-
-	</style>
-
-
-
-</head>
-
-
-<body>
-
+{% block main_content %}
 	<h1>F-ing Around, {{ name }}.</h1>
 
 	<div class="huge">In space...<br/> there is {{ fav_color }}.</div>
@@ -40,6 +24,5 @@
 		{% endfor %}
 		</ul>
 	</div>
-</body>
 
-</html>
+{% endblock %}
