--- a/forum/forum.css
+++ b/forum/forum.css
@@ -1,36 +1,31 @@
 @import url(https://fonts.googleapis.com/css?family=Nova+Square);
 
-@font-face {
-    font-family: 'Nova Square';
-    src: url(https://fonts.googleapis.com/css?family=Nova+Square);
-    font-family: 'Trebuchet MS', Helvetica, sans-serif;
-	}
-
 body {
-	background-color: white;
+	background-color: black;
 	font-family: 'Trebuchet MS', Helvetica, sans-serif;
 	font-size:1rem;
 	font-weight: 500;
+	color: white;
+	background-image: url(star_wars_force.jpg);
+	
 	}
 
 h1 {
 	font-family:'Nova Square', cursive;	
-	color: black;
+	color: yellow;
 	font-size: 3.2rem;
 	margin: .3em 0em;
 	}
 
 h2 {
 	font-family:'Nova Square', cursive;
-	color: black;
+	color: white;
 	background-color: white;
 	border-radius: 2px;
 	padding: .3rem;
 	}
 
-h3 {
-	font-family:'Nova Square', cursive;
-	}
+
 
 a {
 	text-decoration: none;	
@@ -40,6 +35,7 @@ footer {
 	text-align:right;
 	margin: 1rem 0px 0px 0px;
 	font-size: .6rem;
+	color: white;
 }
 
 input {
@@ -48,9 +44,13 @@ input {
     padding: 5px;
 }
 
+#main-posts {
+	opacity: .8;
+}
+
 .page-wrapper {
-	max-width: 54rem;
-	min-width: 33rem;
+	max-width: 750px;
+	min-width: 400px;
 	margin: 4em auto;
 	}
 
@@ -60,17 +60,23 @@ input {
 	border-radius: 2px;
 	margin: 7px 0px;
 	padding: .5rem 2rem;
-	background-color: white;
-
+	background-color: black;
+	color: white;
 	}
 
 
-.new-post
-	{
+.new-post	{
 	border: 1px solid;
 	border-radius: 2px;
 	margin: 7px 0px;
 	padding: .5rem 2rem;
-	background-color: white;
-
+	background-color: black;
+	color: white;
+	opacity: 1;
 	}
+
+.small {
+	font-size: .8em;
+	color: white;
+	text-align: right;
+}
