--- a/django/portfolio/javapic/templates/javapic/gallery.html
+++ b/django/portfolio/javapic/templates/javapic/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>javapic</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../../static/javapic/css/style.css" />
 </head>
 <body>
 <main class="gallery_page">
@@ -11,9 +11,9 @@
     <section id="gallery" class="gallery">
         <!--<li><img src="images/pdxcg_01.jpg" /></li>-->
     </section>
-    <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
+    <div id="image_show" class="display_none"><img src="../../static/javapic/images/pdxcg_40.jpg" /></div>
 </main>
 
-<script src="js/gallery.js"></script>
+<script src="../../static/javapic/js/gallery.js"></script>
 </body>
 </html>
