--- a/django/portfolio/javapic/templates/javapic/join.html
+++ b/django/portfolio/javapic/templates/javapic/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>javapic</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href='../../static/javapic/css/style.css' />
 </head>
 <body>
 
@@ -22,6 +22,6 @@
         </form>
     </section>
 </main>
-<script src="js/join.js"></script>
+<script src="../../static/javapic/js/join.js"></script>
 </body>
 </html>
