--- a/django/portfolio/my_profile/templates/my_profile/reality.html
+++ b/django/portfolio/my_profile/templates/my_profile/reality.html
@@ -5,7 +5,10 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+
+	{% load staticfiles %}
+
+	<link rel="stylesheet" type="text/css" href="{% static 'my_profile/mystyle.css' %}">
 
 
 	<title>Shawn Waldow - Reality's Real Nice</title>
@@ -22,11 +25,11 @@
 
 	<blockquote>"The common fellow can be a wizard when-he-will."</blockquote>
 
-	<img src="reality.jpg" alt = "Stream East of Faith" title = "Stream East of Faith (A.K.A. North Sister)" height = "450"/>
+	<img src="{% static 'my_profile/reality.jpg' %}" alt = "Stream East of Faith" title = "Stream East of Faith (A.K.A. North Sister)" height = "450"/>
 
 
 	<footer>
-		<a href="profile.html">Go back to bits and pieces</a>
+		<a href="{% url 'profile' %}">Go back to bits and pieces</a>
 	</footer>
 </body>
 
