--- a/django/portfolio/javapic/templates/javapic/gallery.html
+++ b/django/portfolio/javapic/templates/javapic/gallery.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>javapic</title>
-    <link rel="stylesheet" href="../../static/javapic/css/style.css" />
+
+    {% load staticfiles %}
+
+    <link rel="stylesheet" href="{% static 'javapic/css/style.css' %}" />
 </head>
 <body>
 <main class="gallery_page">
@@ -14,6 +17,6 @@
     <div id="image_show" class="display_none"><img src="../../static/javapic/images/pdxcg_40.jpg" /></div>
 </main>
 
-<script src="../../static/javapic/js/gallery.js"></script>
+<script src="{% static 'javapic/js/gallery.js' %}"></script>
 </body>
 </html>
