--- a/django/portfolio/javapic/templates/javapic/index.html
+++ b/django/portfolio/javapic/templates/javapic/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>javapic</title>
+
+    {% load staticfiles %}
   
-    <link rel="stylesheet" href='../static/javapic/css/style.css' >
+    <link rel="stylesheet" href="{% static 'javapic/css/style.css' %}" >
 
 </head>
 <body>
@@ -14,11 +16,11 @@
     <div id="jumbotron" class="jumbotron">
         <div>a picture is worth a 1000 words</div>
     </div>
-    <div class="bottom_jumbo"><a href="join/">join now</a></div>
+    <div class="bottom_jumbo"><a href="{% url 'join' %}">join now</a></div>
 
 </main>
 
 </body>
-<script src="../static/javapic/js/jumbotron.js"></script>
+<script src="{% static 'javapic/js/jumbotron.js' %}"></script>
 
 </html>
